# QuditVQE

./: .gitignore  232_d3_sgd_all_types.py  232_d3_sgd_promising.py  CountGates.ipynb  Majorana.ipynb  Majorana.py  PlotEigenvalue.m  PlotFidelity.ipynb  PlotFidelity.m  PlotMajorana.m  QudiTop.ipynb  QudiTop.py  Qudit.ipynb  QuditSim.py  QuditSym.ipynb  QuquartSym.ipynb  QutritSym.ipynb  README.md  Review.md  SymDec.ipynb  TestFile.ipynb  ToDoList.md  UnivDec.ipynb  UnivDecom.ipynb  VQE_232_d3_beforeL.py  VQE_232_d3_lowestD.py  VQE_232_d3_states.py  VQE_322_d2.py  VQE_322_d2_gates.py  VQE_322_d3.py  VQE_322_d3_ansatz.py  VQE_322_d3_beforeL.py  VQE_322_d3_classical.py  VQE_322_d3_gates.py  VQE_322_d3_iter.py  VQE_322_d3_mat.py  VQE_322_d3_states.py  VQE_322_d3_testSegFault.py  count_gates.ipynb  logger.py  (+9 more)
QudiTop/: QudiTop.py  circuit.py  evolution.py  expectation.py  gates.py  global_var.py  utils.py
QuditSim/: QuditSim.md  QuditSim.py
data_232/: 232_models.xlsx  Eigenvalues.md  Logs.md  PlotFidelity_L1L2.m  testFile.m
data_322/: 322_d3_num1_model957_RDM3_target_state_vector.mat  322_d3_num2_model394_RDM3_target_state_vector.mat  322_d3_num3_model371_RDM3_target_state_vector.mat  322_d3_num4_model123_RDM3_target_state_vector.mat  322_d3_num5_model523_RDM3_target_state_vector.mat  PlotFidelity_L1.m  PlotFidelity_L1L2.m  PlotFidelity_L2.m  data_322_yang.mat  fidelity_classical_L1.mat  fidelity_classical_iter.mat  fidelity_energy_L1.mat  fidelity_energy_L2.mat  fidelity_violation_L1.mat  fidelity_violation_L2.mat  prepared_coor_violation.mat  prepared_state_violation.mat  (+4 more)
(+3622 files in other folders)
