[project]
name = "quditvqe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cairosvg>=2.8.2",
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "mindquantum==0.9.11",
    "mindspore==2.5.0",
    "numpy==1.26.4",
    "scipy>=1.13.1",
    "sympy==1.13.3",
]
